<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            android:layout_width="360dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/diems_logo_round" />

        <RelativeLayout
            android:id="@+id/rlRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--            <EditText-->
            <!--                android:id="@+id/etName"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@+id/toolbar"-->
            <!--                android:layout_marginLeft="12dip"-->
            <!--                android:layout_marginTop="30dip"-->
            <!--                android:layout_marginRight="12dip"-->
            <!--                android:background="@drawable/text_boundary_background"-->
            <!--                android:drawableLeft="@drawable/ic_action_person"-->
            <!--                android:drawablePadding="3dp"-->
            <!--                android:hint="@string/enter_name"-->
            <!--                android:padding="10dip"-->
            <!--                android:singleLine="true"-->
            <!--                android:textColor="@android:color/black"-->
            <!--                android:textSize="16sp" />-->

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:drawableLeft="@drawable/ic_action_email"
                android:drawablePadding="3dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <!--            <EditText-->
            <!--                android:id="@+id/etPhoneNumber"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@+id/etEmail"-->
            <!--                android:layout_marginLeft="12dip"-->
            <!--                android:layout_marginTop="6dip"-->
            <!--                android:layout_marginRight="12dip"-->
            <!--                android:background="@drawable/text_boundary_background"-->
            <!--                android:drawableLeft="@drawable/ic_action_phone"-->
            <!--                android:drawablePadding="3dp"-->
            <!--                android:hint="@string/mobile_number"-->
            <!--                android:inputType="phone"-->
            <!--                android:maxLength="10"-->
            <!--                android:maxLines="1"-->
            <!--                android:padding="10dip"-->
            <!--                android:singleLine="true"-->
            <!--                android:textColor="@android:color/black"-->
            <!--                android:textSize="16sp" />-->

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etEmail"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="6dip"
                android:layout_marginRight="12dip"
                android:background="@drawable/text_boundary_background"
                android:drawableLeft="@drawable/ic_action_password"
                android:drawablePadding="3dp"
                android:hint="@string/choose_password"
                android:inputType="textPassword"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <!--            <EditText-->
            <!--                android:id="@+id/etConfirmPassword"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_below="@+id/etPassword"-->
            <!--                android:layout_marginLeft="12dip"-->
            <!--                android:layout_marginTop="6dip"-->
            <!--                android:layout_marginRight="12dip"-->
            <!--                android:background="@drawable/text_boundary_background"-->
            <!--                android:drawableLeft="@drawable/ic_action_password"-->
            <!--                android:drawablePadding="3dp"-->
            <!--                android:hint="@string/confirm_password"-->
            <!--                android:inputType="numberPassword"-->
            <!--                android:maxLength="6"-->
            <!--                android:padding="10dip"-->
            <!--                android:singleLine="true"-->
            <!--                android:textColor="@android:color/black"-->
            <!--                android:textSize="16sp" />-->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="40dip"
                android:layout_marginRight="12dip"
                android:background="@color/colorPrimaryDark"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>